added endpoints for creating wallet and getting balance with redis caching
